# chanki

./: .gitignore  Cargo.toml  Makefile  README.org  test.pgn
chanki-cli/: Cargo.toml
chanki-cli/src/: main.rs
chanki-gui/: Cargo.toml
chanki-gui/src/: app.rs  main.rs
scripts/: chanki
src/: board.rs  deck.rs  lib.rs  main.rs  pgn.rs  tests.rs
